login and sign up button fixed, margin on collapsed linked fixed

--- a/packages/system/public/assets/css/common.css
+++ b/packages/system/public/assets/css/common.css
@@ -72,7 +72,6 @@ h3 {
 .qtp-header-text{
     color: grey;
     background-color: black;
-    padding: 10px;
     border-radius: 5px;
 }
 
@@ -81,6 +80,11 @@ h3 {
 
 h5.qtp-header-text{
    font-weight:normal;
+   margin: 10px 12px 10px 5px;
+   padding-left: 5px;
+   padding-right: 5px;
+   padding-bottom: 5px;
+   padding-top: 5px;
 }
 
 .navbar-inverse {
